# ChangeLog for media-libs/glu
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/glu/ChangeLog,v 1.17 2013/09/21 17:09:42 mgorny Exp $

  21 Sep 2013; Michał Górny <mgorny@gentoo.org> glu-9.0.0-r1.ebuild:
  Add MULTILIB_USEDEP, update emul-linux blocker.

*glu-9.0.0-r1 (23 Jul 2013)

  23 Jul 2013; Michał Górny <mgorny@gentoo.org> +glu-9.0.0-r1.ebuild:
  Switch to autotools-multilib for USE-flag-based multilib support.

  03 Mar 2013; Mike Frysinger <vapier@gentoo.org> glu-9.0.0.ebuild:
  Add s390 lovin.

  17 Jan 2013; Justin Lecher <jlec@gentoo.org> glu-9.0.0.ebuild, metadata.xml:
  Add missing hyphen

  04 Jan 2013; Jeroen Roovers <jer@gentoo.org> glu-9.0.0.ebuild:
  Stable for HPPA (bug #440872).

  01 Jan 2013; Raúl Porcel <armin76@gentoo.org> glu-9.0.0.ebuild:
  sh stable wrt #440872

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> glu-9.0.0.ebuild:
  Stable for alpha, wrt bug #440872

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org> glu-9.0.0.ebuild:
  Stable for sparc, wrt bug #440872

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org> glu-9.0.0.ebuild:
  Stable for ia64, wrt bug #440872

  17 Dec 2012; Markus Meier <maekke@gentoo.org> glu-9.0.0.ebuild:
  arm stable, bug #440872

  08 Dec 2012; Agostino Sarubbo <ago@gentoo.org> glu-9.0.0.ebuild:
  Stable for ppc64, wrt bug #440872

  28 Nov 2012; Brent Baude <ranger@gentoo.org> glu-9.0.0.ebuild:
  Marking glu-9.0.0 ppc stable for bug 440872

  18 Nov 2012; Agostino Sarubbo <ago@gentoo.org> glu-9.0.0.ebuild:
  Stable for x86, wrt bug #440872

  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> glu-9.0.0.ebuild:
  Stable for amd64, wrt bug #440872

  14 Nov 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  glu-9.0.0.ebuild:
  Add pkg_pretend() check against file collisions with symlinks which were
  managed by eselect opengl, bug #435682.

  20 Sep 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  glu-9.0.0.ebuild: