@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/glu/glu-9.0.0-r1.ebuild,v 1.2 2013/09/21 17:09:41 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/glu/glu-9.0.0-r1.ebuild,v 1.3 2014/03/27 11:05:16 ago Exp $
 
 EAPI=5
 
@@ -25,7 +25,7 @@ fi
 
 LICENSE="SGI-B-2.0"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~sparc-solaris ~x64-solaris ~x86-solaris"
+KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~sparc-solaris ~x64-solaris ~x86-solaris"
 IUSE="static-libs"
 
 DEPEND="virtual/opengl[${MULTILIB_USEDEP}]"
