@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/glu
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/glu/ChangeLog,v 1.17 2013/09/21 17:09:42 mgorny Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/glu/ChangeLog,v 1.18 2014/03/27 11:05:16 ago Exp $
+
+  27 Mar 2014; Agostino Sarubbo <ago@gentoo.org> glu-9.0.0-r1.ebuild:
+  Stable for amd64, wrt bug #500368
 
   21 Sep 2013; Michał Górny <mgorny@gentoo.org> glu-9.0.0-r1.ebuild:
   Add MULTILIB_USEDEP, update emul-linux blocker.
